# my-project

./: .PCA_main.cpp.swp  CMakeLists.txt  PCA  PCA.h  PCA_FUNC.cpp  PCA_main.cpp  data.csv  data1 (1).csv  data5.csv  int150x64.csv  output.csv  output1.csv  test  test.cpp
week_01_ml_intro/Homework/: hw_1_game_of_thrones.ipynb
